--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title>Home / Adrián Pévere</title>
     </head>
     <body>                
-        <head>
+        <header>
             <div>
                 <h1>Hi! My name is Adrián Pévere</h1>                
             </div>            
-        </head>
+        </header>
         <nav>            
             <a href="./index.html">Home</a><strong> | </strong>
             <a href="./hobbies.html">Hobbies</a><strong> | </strong>
@@ -22,11 +22,11 @@
             <br>                       
             <p>Lets check my hobbies, movies and videogames. I will show you around.</p>
         </main>
-    </body>        
-    <footer>
+        <footer>
         <div>            
             <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
             <p>Copyright Adrián Pévere 2023.</p></h6>
         </div>
-    </footer>
+        </footer>
+    </body>
 </html>
