--- a/hobbies.html
+++ b/hobbies.html
@@ -5,7 +5,7 @@
         <title>Hobbies / Adrián Pévere</title>
     </head>
     <body>                
-        <head>
+        <header>
             <div>
                 <h1>Hobbies</h1>                                
             </div>
@@ -15,7 +15,7 @@
                 <a href="./movies.html">Movies</a><strong> | </strong>
                 <a href="./videogames.html">Videogames</a>
             </nav>
-        </head>       
+        </header>       
         <main>                        
             <p>Some of my hobbies include</p>
             <ul>                
@@ -47,11 +47,11 @@
                 </li>
             </ul>
         </main>
-    </body>        
-    <footer>
-        <div>            
-            <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
-            <p>Copyright Adrián Pévere 2023.</p></h6>
-        </div>
-    </footer>
+        <footer>
+            <div>            
+                <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
+                <p>Copyright Adrián Pévere 2023.</p></h6>
+            </div>
+        </footer>        
+    </body>
 </html>
