--- a/hobbies.html
+++ b/hobbies.html
@@ -46,6 +46,7 @@
                     <h5>Cora my small cat.</h5>                                        
                 </li>
             </ul>
+            <a href="#top">Back to Top</a>
         </main>
         <footer>
             <div>            
