--- a/movies.html
+++ b/movies.html
@@ -5,7 +5,7 @@
         <title>Fav Movies / Adrián Pévere</title>
     </head>
     <body>                
-        <head>
+        <header>
             <div>
                 <h1>Movies</h1>                                
             </div>
@@ -15,7 +15,7 @@
                 <a href="./movies.html">Movies</a><strong> | </strong>
                 <a href="./videogames.html">Videogames</a>
             </nav>
-        </head>       
+        </header>       
         <main>                        
             <p>I was never a fan of having <strong>a single favorite</strong> band or movie or videogame, <br>however we do have a handful of entretainment pieces that we are fond of.<br></p><p>Mine are:</p>
             <ul>                
@@ -23,38 +23,44 @@
                     <label>The Lord of the Rings: The Fellowship of the Ring (2001)</label><br>
                     <a href="https://www.youtube.com/watch?v=V75dMMIW2B4"><br>
                         <img src="./images/gandalf_balrog.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
                 <li>
                     <label>Star Wars: A New Hope (1977)</label><br>
                     <a href="https://www.youtube.com/watch?v=vZ734NWnAHA"><br>
                         <img src="./images/a_new_hope.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
                 <li>
                     <label>The Last Great Action Hero (1993)</label><br>
                     <a href="https://www.youtube.com/watch?v=ShBw43KJoLk"><br>
                         <img src="./images/terminator-stallone.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>                
                 <li>
                     <label>Jurassic Park (1993)</label><br>
                     <a href="https://www.youtube.com/watch?v=lc0UehYemQA"><br>
                         <img src="./images/you_did_it.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
                 <li>
                     <label>The Matrix (1999)</label><br>
                     <a href="https://www.youtube.com/watch?v=vKQi3bBA1y8"><br>
                         <img src="./images/neo.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
             </ul>
+            <a href="#top">Back to Top</a>
         </main>
     </body>        
     <footer>
