--- a/videogames.html
+++ b/videogames.html
@@ -5,7 +5,7 @@
         <title>Fav Videogames / Adrián Pévere</title>
     </head>
     <body>                
-        <head>
+        <header>
             <div>
                 <h1>Videogames</h1>                                
             </div>
@@ -15,7 +15,7 @@
                 <a href="./movies.html">Movies</a><strong> | </strong>
                 <a href="./videogames.html">Videogames</a>
             </nav>
-        </head>       
+        </header>       
         <main>                        
             <p>In a similar fashion, there are hundreds of fantastic games.<br></p><p>My curated list would be:</p>
             <ul>                
@@ -23,44 +23,50 @@
                     <label>Mass Effect (series) (PC - 2007)</label><br>
                     <a href="https://www.youtube.com/watch?v=n8i53TtQ6IQ"><br>
                         <img src="./images/me.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
                 <li>
                     <label>Chrono Trigger (SNES - 1995)</label><br>
                     <a href="https://www.youtube.com/watch?v=2fl-AylaHY8"><br>
                         <img src="./images/chrono_camp_scene.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
                 <li>
                     <label>The Legend of Zelda: Breath of the Wild (Wii-U / Switch 2006)</label><br>
                     <a href="https://www.youtube.com/watch?v=zw47_q9wbBE"><br>
                         <img src="./images/botw.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>                
                 <li>
                     <label>Portal (PC - 2007)</label><br>
                     <a href="https://www.youtube.com/watch?v=zQhCTRHYBZQ"><br>
                         <img src="./images/portal.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
                 <li>
                     <label>Super Mario 64 (N64 - 1999)</label><br>
                     <a href="https://www.youtube.com/watch?v=vKQi3bBA1y8"><br>
                         <img src="./images/super_mario_64.jpg" alt=""><br>
-                        See the Trailer</a>
-                        <br><br>
+                        See the Trailer
+                    </a>
+                    <br><br>
                 </li>
             </ul>
+            <a href="#top">Back to Top</a>
         </main>
-    </body>        
-    <footer>
-        <div>            
-            <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
-            <p>Copyright Adrián Pévere 2023.</p></h6>
-        </div>
-    </footer>
+        <footer>
+            <div>            
+                <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
+                <p>Copyright Adrián Pévere 2023.</p></h6>
+            </div>
+        </footer>
+    </body>    
 </html>
