--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">     
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home / Adrián Pévere</title>
     </head>
     <body>                
@@ -23,10 +25,10 @@
             <p>Lets check my hobbies, movies and videogames. I will show you around.</p>
         </main>
         <footer>
-        <div>            
-            <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
-            <p>Copyright Adrián Pévere 2023.</p></h6>
-        </div>
+            <div>            
+                <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
+                <p>Copyright Adrián Pévere 2023.</p></h6>
+            </div>
         </footer>
     </body>
 </html>
