--- a/videogames.html
+++ b/videogames.html
@@ -66,7 +66,7 @@
         </main>
         <footer>
             <div>            
-                <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><b> or whatsapp me at </b><a href="tel:+59899444412">+598 99 444 412</a>
+                <h6>Stay in touch, <a href="mailto:pevere@gmail.com">send me an email</a><strong> or whatsapp me at </strong><a href="tel:+59899444412">+598 99 444 412</a>
                 <p>Copyright Adrián Pévere 2023.</p></h6>
             </div>
         </footer>
