--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hobbies / Adrián Pévere</title>
+        <link rel="stylesheet" href="./links-and-images/css/style.css">
     </head>
     <body>                
         <header>
@@ -23,28 +24,28 @@
             <ul>                
                 <li>
                     <p>Photography / Digital and Analog</p>                                        
-                    <img src="./images/krakow_small.jpg" alt="A black and white, highly-constrasted picture of a street in Krakow, three people walk at an even distance forming an arc.">                    
+                    <img src="./links-and-images/images/krakow_small.jpg" alt="A black and white, highly-constrasted picture of a street in Krakow, three people walk at an even distance forming an arc.">                    
                     <h5>Krakow. Taken by me.</h5>                                        
                 </li>
                 <li>
                     <p>In-line rollerskating</p>
-                    <img src="./images/stock-photo--s-rollerskating-party-at-roller-rink-in-kentucky-1959397117_small.jpg" alt="A man dressed in a 70's disco way wearing black glasses and a redheaded twig, on rollers, smiling at the camera and doing thumbs up while he rides.">
+                    <img src="./links-and-images/images/stock-photo--s-rollerskating-party-at-roller-rink-in-kentucky-1959397117_small.jpg" alt="A man dressed in a 70's disco way wearing black glasses and a redheaded twig, on rollers, smiling at the camera and doing thumbs up while he rides.">
                     <h5><i>Cortesy</i> of Shutterstock.</h5>                                        
                 </li>
 
                 <li>
                     <p>Playing games (Videogames, boxed, D&D)</p>                                        
-                    <img src="./images/alperen-yazgi-QuP5RL_E5oE-unsplash - small.jpg" alt="Close-up of a few roleplaying multi-sided dices. Photo by Alperen Yazgl @Unsplash">                    
+                    <img src="./links-and-images/images/alperen-yazgi-QuP5RL_E5oE-unsplash - small.jpg" alt="Close-up of a few roleplaying multi-sided dices. Photo by Alperen Yazgl @Unsplash">                    
                     <h5>Alperen Yazgi. Unsplash.</h5>                                        
                 </li>
                 <li>
                     <p>Reading</p>                                        
-                    <img src="./images/small_library.jpeg" alt="A closeup of a few books on a bookshelf">
+                    <img src="./links-and-images/images/small_library.jpeg" alt="A closeup of a few books on a bookshelf">
                     <h5>A tiny library at my study.</h5>                                        
                 </li>
                 <li>
                     <p>Playing with my cats</p>                                        
-                    <img src="./images/cora.jpeg" alt="A black and white cat looking at the camera sitting on a cushion under a chair">                    
+                    <img src="./links-and-images/images/cora.jpeg" alt="A black and white cat looking at the camera sitting on a cushion under a chair">                    
                     <h5>Cora my small cat.</h5>                                        
                 </li>
             </ul>
