--- a/movies.html
+++ b/movies.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Fav Movies / Adrián Pévere</title>
+        <link rel="stylesheet" href="./links-and-images/css/style.css">
     </head>
     <body>                
         <header>
@@ -24,7 +25,7 @@
                 <li>                    
                     <label>The Lord of the Rings: The Fellowship of the Ring (2001)</label><br>
                     <a href="https://www.youtube.com/watch?v=V75dMMIW2B4"><br>
-                        <img src="./images/gandalf_balrog.jpg" alt=""><br>
+                        <img src="./links-and-images/images/gandalf_balrog.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -32,7 +33,7 @@
                 <li>
                     <label>Star Wars: A New Hope (1977)</label><br>
                     <a href="https://www.youtube.com/watch?v=vZ734NWnAHA"><br>
-                        <img src="./images/a_new_hope.jpg" alt=""><br>
+                        <img src="./links-and-images/images/a_new_hope.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -40,7 +41,7 @@
                 <li>
                     <label>The Last Great Action Hero (1993)</label><br>
                     <a href="https://www.youtube.com/watch?v=ShBw43KJoLk"><br>
-                        <img src="./images/terminator-stallone.jpg" alt=""><br>
+                        <img src="./links-and-images/images/terminator-stallone.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -48,7 +49,7 @@
                 <li>
                     <label>Jurassic Park (1993)</label><br>
                     <a href="https://www.youtube.com/watch?v=lc0UehYemQA"><br>
-                        <img src="./images/you_did_it.jpg" alt=""><br>
+                        <img src="./links-and-images/images/you_did_it.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -56,7 +57,7 @@
                 <li>
                     <label>The Matrix (1999)</label><br>
                     <a href="https://www.youtube.com/watch?v=vKQi3bBA1y8"><br>
-                        <img src="./images/neo.jpg" alt=""><br>
+                        <img src="./links-and-images/images/neo.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
