--- a/videogames.html
+++ b/videogames.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Fav Videogames / Adrián Pévere</title>
+        <link rel="stylesheet" href="./links-and-images/css/style.css">
     </head>
     <body>                
         <header>
@@ -24,7 +25,7 @@
                 <li>                    
                     <label>Mass Effect (series) (PC - 2007)</label><br>
                     <a href="https://www.youtube.com/watch?v=n8i53TtQ6IQ"><br>
-                        <img src="./images/me.jpg" alt=""><br>
+                        <img src="./links-and-images/images/me.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -32,7 +33,7 @@
                 <li>
                     <label>Chrono Trigger (SNES - 1995)</label><br>
                     <a href="https://www.youtube.com/watch?v=2fl-AylaHY8"><br>
-                        <img src="./images/chrono_camp_scene.jpg" alt=""><br>
+                        <img src="./links-and-images/images/chrono_camp_scene.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -40,7 +41,7 @@
                 <li>
                     <label>The Legend of Zelda: Breath of the Wild (Wii-U / Switch 2006)</label><br>
                     <a href="https://www.youtube.com/watch?v=zw47_q9wbBE"><br>
-                        <img src="./images/botw.jpg" alt=""><br>
+                        <img src="./links-and-images/images/botw.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -48,7 +49,7 @@
                 <li>
                     <label>Portal (PC - 2007)</label><br>
                     <a href="https://www.youtube.com/watch?v=zQhCTRHYBZQ"><br>
-                        <img src="./images/portal.jpg" alt=""><br>
+                        <img src="./links-and-images/images/portal.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
@@ -56,7 +57,7 @@
                 <li>
                     <label>Super Mario 64 (N64 - 1999)</label><br>
                     <a href="https://www.youtube.com/watch?v=vKQi3bBA1y8"><br>
-                        <img src="./images/super_mario_64.jpg" alt=""><br>
+                        <img src="./links-and-images/images/super_mario_64.jpg" alt=""><br>
                         See the Trailer
                     </a>
                     <br><br>
