--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Home / Adrián Pévere</title>
+        <link rel="stylesheet" href="./links-and-images/css/style.css">
     </head>
     <body>                
         <header>
             <div>
-                <h1>Hi! My name is Adrián Pévere</h1>                
+                <h1 style="color: #2a2a2a;" >Hi! My name is Adrián Pévere</h1>                
             </div>            
         </header>
         <nav>            
